implementing the logics of the endpoints
