# src/routers/admin/packages.ts
@@ -1,4 +1,5 @@
 import { Request, Response, Router } from "express";
+import { Package, Packages } from "../../models/packages";
 
 export const packagesRouter = Router();
 interface PackagesRequest extends Request {
@@ -6,7 +7,8 @@ interface PackagesRequest extends Request {
     name: string;
   };
 }
-interface Package {
+interface PackageR {
+  id: string;
   name: string;
   expressLimit: string;
   showLimit: string;
@@ -15,11 +17,7 @@ interface Package {
   price: number;
 }
 
-interface PackagesResponse {
-  packages: Array<Package>;
-}
-
-packagesRouter.get("/packages", (req: PackagesRequest, res: Response) => {
+packagesRouter.get("/packages", async (req: PackagesRequest, res: Response) => {
   /**
     #swagger.requestBody = {
     required: true,
@@ -33,27 +31,41 @@ packagesRouter.get("/packages", (req: PackagesRequest, res: Response) => {
     }
     #swagger.responses[404] = {
         schema: { $ref: '#/definitions/UserNotExists' }
-    }
-    */
+      }
+      */
 
-  const json: PackagesResponse = {
-    packages: [],
-  };
-  res.status(200).json(json);
+  let query = {};
+  if (req.query.name) query = { name: RegExp(req.query.name, "i") };
+
+  const packages_ = await Packages.find(query);
+  const packages = new Array<PackageR>();
+  packages_.forEach((_package: Package) => {
+    packages.push({
+      id: _package.id,
+      name: _package.name,
+      expressLimit: _package.expressLimit,
+      showLimit: _package.showLimit,
+      uploadLimit: _package.uploadLimit,
+      validityPeriod: _package.validityPeriod,
+      price: _package.price,
+    });
+  });
+
+  res.status(200).json({ packages });
 });
 
 interface PackageRequest extends Request {
-  body: Package;
+  body: PackageR;
 }
 
-packagesRouter.post("/package", (req: PackageRequest, res: Response) => {
+packagesRouter.post("/package", async (req: PackageRequest, res: Response) => {
   /**
     #swagger.requestBody = {
     required: true,
     schema: { $ref: "#/components/schemas/PackageRequest" }
     }
     #swagger.responses[200] = {
-        schema: { $ref: '#/components/schemas/PackagesResponse' }
+        schema: { $ref: '#/components/schemas/Response' }
     }
     #swagger.responses[401] = {
         schema: { $ref: '#/definitions/InvalidSession' }
@@ -62,7 +74,50 @@ packagesRouter.post("/package", (req: PackageRequest, res: Response) => {
         schema: { $ref: '#/definitions/UserNotExists' }
     }
     */
+  let invalidRequest = false;
+  let invalidRequestMessage;
 
-  const json = {};
-  res.status(200).json(json);
+  if (!req.body.name) {
+    invalidRequest = true;
+    invalidRequestMessage = "`name`: `string` not provided";
+  }
+  if (!req.body.expressLimit) {
+    invalidRequest = true;
+    invalidRequestMessage = "`expressLimit`: `string` not provided";
+  }
+  if (!req.body.showLimit) {
+    invalidRequest = true;
+    invalidRequestMessage = "`showLimit`: `string` not provided";
+  }
+  if (!req.body.uploadLimit) {
+    invalidRequest = true;
+    invalidRequestMessage = "`uploadLimit`: `string` not provided";
+  }
+  if (!req.body.validityPeriod) {
+    invalidRequest = true;
+    invalidRequestMessage = "`validityPeriod`: `string` not provided";
+  }
+  if (!req.body.price) {
+    invalidRequest = true;
+    invalidRequestMessage = "`price`: `string` not provided";
+  }
+  if (invalidRequest) {
+    res.status(400).json({
+      message: `Bad request:: ${invalidRequestMessage}`,
+    });
+  } else {
+    try {
+      await Packages.create({
+        name: req.body.name,
+        expressLimit: req.body.expressLimit,
+        showLimit: req.body.showLimit,
+        uploadLimit: req.body.uploadLimit,
+        validityPeriod: req.body.validityPeriod,
+        price: req.body.price,
+      });
+      res.status(200).json({ message: "Package added successfully." });
+    } catch {
+      res.status(500).json({ message: "Database error." });
+    }
+  }
 });
